--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
-theme: just-the-docs
+title: Мой сайт на Hacker
+description: Пример сайта на GitHub Pages с темой Hacker
+show_downloads: false
+google_analytics:
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+  - jekyll-remote-theme
