--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,11 @@
-title: zaprett
-description: Сайт приложения zaprett
-theme: just-the-docs
+title: Моя документация
+description: Сайт на GitHub Pages с темой Just the Docs
 
-# Настройки Just the Docs
-#logo: /assets/images/logo.png    # путь к логотипу (опционально)
-color_scheme: dark               # или light (опционально)
-search_enabled: true             # поиск по сайту
+remote_theme: just-the-docs/just-the-docs
 
-# Навигация (пример)
-nav:
-  - Главная: index.md
-  - Руководство:
-      - Установка: guide/install.md
-      - Использование: guide/usage.md
+plugins:
+  - jekyll-remote-theme
 
-# URL сайта (опционально)
-url: "https://username.github.io/repo"
-
-# Локализация (опционально)
-lang: ru
+# Дополнительные настройки (опционально)
+color_scheme: dark
+search_enabled: true
